# ipv8-game

./: .env  .gitignore  Brewfile  Brewfile.lock.json  Cargo.toml  README.md  buildings.toml  docker-compose.yml  justfile
.github/workflows/: cov.yml
buildings/: headquarters.toml
manifests/base/: kustomization.yaml  psql.yaml
manifests/overlays/development/: kustomization.yaml  namespace.yaml
migrations/2022-08-20-194316_create_worlds/: down.sql  up.sql
migrations/2022-08-20-213837_create_players/: up.sql
migrations/2023-02-15-154455_create_chunks/: up.sql
migrations/2023-02-15-163159_create_complex_tiles/: down.sql  up.sql
src/: args.rs  db.rs  debug.rs  main.rs  properties.rs
src/db/: manager.rs  mod.rs  schema.rs
src/db/models/: chunk.rs  complex_tiles.rs  mod.rs  user.rs  world.rs
src/game/: action.rs  building.rs  mod.rs  resources.rs  stages.rs  tick.rs  user.rs  world.rs
src/game/world/: gen.rs  mod.rs
src/game/world/resources/: coal.rs  copper.rs  impassable.rs  iron.rs  mod.rs  water.rs
