[package]
name = "ipv8-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
diesel = { version = "1.4", features = ["postgres", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
