[package]
name = "ipv8-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ipv8-proto-rust = { git = "https://github.com/realliance/ipv8-proto.git", rev = "6d8f43433f1b1f5dfecfd2612b0284a4bf34f602" }
capnp-rpc = "0.14"
chrono = "0.4"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
