[package]
name = "ipv8-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
diesel = { version = "2", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ipv8-proto-rust = { git = "https://github.com/realliance/ipv8-proto.git", rev = "137aa4dea8dd810714dc0e0095b4fd8d0d8e930e" }
capnp-rpc = "0.14"
chrono = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
hashbrown = "0.12"
toml = "0.5"
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
